--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
               <ul class="dropdown-content absolute hidden pt-1 text-center">
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/cse.html">CSE/IT</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ee.html">ECE/EE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/me.html">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/me.html">ME/PE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ce.html">CE</a></li>
    
               </ul>
