--- a/events/cse/1.html
+++ b/events/cse/1.html
@@ -106,7 +106,7 @@
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap"
                     href="../ee.html">ECE/EE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap"
-                    href="../me.html">ME</a></li>
+                    href="../me.html">ME/PE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap"
                     href="../ce.html">CE</a></li>
 
