--- a/events/ee/2.html
+++ b/events/ee/2.html
@@ -102,7 +102,7 @@
               <ul class="dropdown-content absolute hidden pt-1 text-center">
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../cse.html">CSE/IT</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ee.html">ECE/EE</a></li>                
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me.html">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me.html">ME/PE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ce.html">CE</a></li>
 
                 
@@ -266,7 +266,7 @@
     <div class="modal-content py-4 text-left px-6">
 
       <div class="flex text-black-555 justify-between items-center pb-3">
-        <p class="text-2xl font-bold">Team Registration</p>
+        <p class="text-2xl font-bold"> Registration Form</p>
         <div class="modal-close cursor-pointer z-50">
           <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
             viewBox="0 0 18 18">
@@ -278,7 +278,7 @@
       </div>
       <div class="flex w-full pb-6 justify-center items-center rounded text-center text-gray-555">
         <form id="registrationForm" action="" method="POST" >
-          <p id="formTitle" class="text-black-555">Member 1</p>
+
           <div class="my-5 text-sm">
                <input type="text" maxlength="100" name="name" autofocus id="name" class="rounded-sm py-2 px-3 focus:outline-none placeholder-gray-400 text-black-555 bg-gray-100 w-full" placeholder="Name of the Participant" required/>
           </div>
@@ -316,9 +316,7 @@
 
 <input type="hidden" id="event_name" name="event_name" value="design mania">
 <input type="hidden" id="team_name" name="team_name" value=""> 
-<button type="submit" style="display: none;" id="submitForm" class="block text-center my-5 text-black-555 bg-yellow-555 p-3 duration-300 rounded-sm hover:bg-yellow-400 w-full">Done</button>
-<button type="submit" id="addMember" class="block text-center my-5 text-black-555 bg-yellow-555 p-3 duration-300 rounded-sm hover:bg-yellow-400 w-full">Add Member 2</button>
-
+          <button type="submit" class="block text-center text-black-555 bg-yellow-555 p-3 duration-300 rounded-sm hover:bg-yellow-400 w-full">Register</button>
       </form> 
      </div> 
     </div>
@@ -358,37 +356,33 @@ const closeButton = document.querySelectorAll('.modal-close');
 				if (event.target == modal) modalClose();
 			}
 		}
-    let team_name
-  var totalMembers = 3
-  var member = 2
-  $( document ).ready(function() {
+
   $('#registrationForm').submit(function(e) { 
-  document.getElementById("team_email").value = document.getElementById("team_name").value
+  document.getElementById("team_name").value = document.getElementById("team_email").value
   e.preventDefault();
-  $.ajax({
+  request = $.ajax({
        type: 'POST',
-       url: 'https://i-gnez.herokuapp.com/register',
+       url: '//i-gnez.herokuapp.com/register',
        data: $(this).serialize(),
-       complete:  console.log('completed'),
-       success:function (response) {
-        console.log(response.responseText);
-    },
-       error: function (jqXHR, exception) {
-    console.log(jqXHR);},
+       statusCode: {
+         422:function (response) {
+           console.log(response);
+           alert('Invalid data entered into the form')
+         },
+         409:function (response){
+           console.log(response);
+          alert('You have already registered for this event')
+         },
+         400:function (response){
+           console.log(response);
+           alert('The event does not exist')
+         },
+         200:function(response){
+           console.log(response);
+           alert('You have successfully registered for this event. Please check your inbox')
+         }
+       }
   });
-  document.getElementById("registrationForm").reset();
-  document.getElementById("formTitle").innerHTML = "Member " + member
-  if (member < totalMembers)
-  {
-    document.getElementById("submitForm").style.display = "block";
-    document.getElementById("addMember").innerHTML = "Add Member " +  (member + 1)
-  }
-  else{
-    document.getElementById("submitForm").style.display = "none";
-    document.getElementById("addMember").innerHTML = "Done"
-  }
-  member++;
 })
-});
 </script>
 </html>
