--- a/events/cse/3.html
+++ b/events/cse/3.html
@@ -109,6 +109,7 @@
                     href="../me.html">ME/PE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap"
                     href="../ce.html">CE</a></li>
+                    <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../other.html">Other</a></li>
 
 
               </ul>
