--- a/events/other.html
+++ b/events/other.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>About</title>
+  <title>ME</title>
   <meta name="author" content="team-techfest" />
   <meta name="description" content="Official Website of i-GNEz 2021 " />
   <meta name="keywords" content="gndec,gne,i-gnez,i,gnez,webiste,techfest,2021" />
-  <link href="css/tailwind.min.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="../css/tailwind.min.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
   <link rel="shortcut-icon" href="img/favicon.ico">
   <meta name="msapplication-TileColor" content="#f9fafb">
   <meta name="theme-color" content="#101010">
@@ -19,7 +19,7 @@
 </head>
 
 <body class="text-white">
- 
+
   <nav id="header" class="fixed w-full z-20 top-0">
 
     <div id="progress" class="h-1 z-40 top-0"
@@ -28,10 +28,10 @@
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
       <div class="block lg:hidden pl-8 p-2">
-				<a class="text-yellow-555 text-base no-underline hover:no-underline " href="index.html">
+        <a class="text-yellow-555 text-base no-underline hover:no-underline" href="../index.html">
           i-GNEz
-				</a>
-			</div>
+        </a>
+      </div>
 
       <div class="block lg:hidden pr-4">
         <button id="nav-toggle" class="flex items-center px-3 py-2 text-yellow-555 border-gray-600 focus:outline-none">
@@ -49,57 +49,167 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="index.html">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="../index.html">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="events.html" class="hover:text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="../events.html" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/cse.html">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ee.html">ECE/EE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/me.html">ME/PE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ce.html">CE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/other.html">Other</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="cse.html">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee.html">ECE/EE</a></li>
+                <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me.html">ME/PE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce.html">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="other.html">Other</a></li>
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="border-b-0 md:border-b-4 border-yellow-555  inline-block text-yellow-555  py-2 px-4" href="about.html">About</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../about.html">About</a>
           </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555  py-2 px-4"
-              href="contact.html">Contact</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  
-  <section>
-    <div class="container min-h-full mx-auto flex flex-col md:flex-row items-center mb-12 mt-24 md:my-24">
-      <div class="flex flex-col w-full lg:w-1/3 justify-center items-start px-8">
-        <p class="ml-2 text-yellow-555 uppercase tracking-loose">About</p>
-        <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">Don’t miss this exclusive event....</p>
-        <p class="text-sm md:text-base text-gray-555 text-gray-555 mb-4">
-            Our team has put in all our efforts to organise this exclusive event overall India and we’ll make sure that the most talented person is awarded with the best. We believe in fair and genuine results and we won’t be bias with the results. We assure a complete integrity while the fest.
-        </p>
-        <p class="text-sm md:text-base text-gray-555 text-gray-555 mb-4">
-            We want you to use this as a platform to showcase your talent overall India. This may brig you even more opportunities in future. The entire fest will be conducted online and similarly the results will be declared online as well. 
 
-So, be ready, register yourself now and make your way towards the winner trophy. Good Luck :)</p>
-<p class="text-sm md:text-base text-gray-555 text-gray-555 mb-4">
-Team GNDEC
-        </p>
-      </div>
-      <div class="ml-0 md:ml-12 lg:w-2/3">
-        <div class="container mx-auto w-full h-full">
-<img src="images/about.png"/>
+  <main>
+
+<div class="container mb-0 md:mb-24 mx-auto py-4">
+
+  <div class="text-center mt-12 md:mt-24 mb-3 md:mb-12">
+    <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-1">
+      Welcome to Planet : Mechanical Eng
+    </p>
+    <p class="text-sm md:text-base text-gray-555 text-gray-555 mb-4">
+      Click on an event to view its complete details
+    </p>
+  </div>
+
+  <div class="flex flex-wrap justify-center">
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/1.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/1.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 1
+          </p>
         </div>
       </div>
     </div>
-  </section>  
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/2.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/2.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 2
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/3.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/3.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 3
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/4.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/4.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 4
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/5.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/1.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 5
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/6.html">
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/2.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 6
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
+      <div class="overflow-hidden">
+        <div class="mx-4 md:mx-2 lg:mx-0">
+          <a href="me/7.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/3.png"> 
+          </a>
+        </div>
+        <div class="p-4">
+          <p class="ml-2 text-yellow-555 uppercase tracking-loose">6 May, 2021</p>
+          <p class="text-3xl md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Hackathon 7
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+ 
+  </main>
 
   <footer class="relative bg-gray-555 pt-8 pb-6">
     <div class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
@@ -176,6 +286,6 @@ Team GNDEC
   </footer> 
 
 </body>
-<script src="js/jquery.min.js" type="text/javascript"></script> 
-<script src="js/index.js" type="text/javascript"></script>
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/index.js" type="text/javascript"></script>
 </html>
